# euicc-rs

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
examples/: ccid_lpa.rs  qmi_lpa.rs
examples/lpa_cli/: mod.rs
src/: bpp.rs  error.rs  es10a.rs  es10b.rs  es10c.rs  es11.rs  es9p.rs  hex.rs  identifier.rs  lib.rs  lpa.rs  notification.rs  primitive.rs  profile.rs  rsp.rs
src/apdu/: card.rs  client.rs  isdr.rs  mbim.rs  mod.rs  qcom.rs  transport.rs
src/bertlv/: length.rs  mod.rs  octet_string.rs  tag.rs  tlv.rs  traits.rs
src/lpa/: activation.rs  client.rs  download.rs  http.rs  rootci.rs  server.rs  status.rs
src/profile/: class.rs  icon.rs  info.rs  notification_config.rs  operator.rs  state.rs  tlv.rs
src/rootci/: bundle-tests.pem  bundle.pem
src/rsp/: execution.rs  header.rs  status_code.rs
